log
Sun 19 Mar 2023 03:19:59 AM UTC: 
 tests:  0|6
total_score: 0/70
49c04bd
Sun 19 Mar 2023 03:21:27 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:31:8: error: conflicting types for ‘createList’; have ‘List *(List *)’ {aka ‘struct List *(struct List *)’}
   31 | List * createList(List * lista) {
      |        ^~~~~~~~~~
In file included from list.c:4,
                 from test.c:5:
list.h:6:8: note: previous declaration of ‘createList’ with type ‘List *(void)’ {aka ‘struct List *(void)’}
    6 | List * createList(void);
      |        ^~~~~~~~~~
test.c: In function ‘test_create’:
test.c:84:15: error: too few arguments to function ‘createList’
   84 |     List* L = createList();
      |               ^~~~~~~~~~
In file included from test.c:5:
list.c:31:8: note: declared here
   31 | List * createList(List * lista) {
      |        ^~~~~~~~~~
Compilation failed
680b41b
Sun 19 Mar 2023 03:21:54 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:10: error: variable ‘lista’ set but not used [-Werror=unused-but-set-variable]
   32 |   List * lista = NULL;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
5422af5
Sun 19 Mar 2023 03:22:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
82aca71
Sun 19 Mar 2023 03:24:05 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2820848
Sun 19 Mar 2023 03:24:25 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:9: error: ‘list’ is a pointer; did you mean to use ‘->’?
   38 |     list.current = list.head;
      |         ^
      |         ->
list.c:38:24: error: ‘list’ is a pointer; did you mean to use ‘->’?
   38 |     list.current = list.head;
      |                        ^
      |                        ->
list.c:39:16: error: ‘list’ is a pointer; did you mean to use ‘->’?
   39 |     return list.head;
      |                ^
      |                ->
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
401d86e
Sun 19 Mar 2023 03:24:37 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f5545bd
Sun 19 Mar 2023 03:26:22 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
81ef8b0
Sun 19 Mar 2023 03:26:42 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
5d601a0
Sun 19 Mar 2023 03:27:48 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
fb8b88d
Sun 19 Mar 2023 03:27:59 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
10f04cd
Sun 19 Mar 2023 03:29:04 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
4662656
Sun 19 Mar 2023 03:34:05 AM UTC: 
 list.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
98dfecc
Sun 19 Mar 2023 03:37:24 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:67:38: error: lvalue required as left operand of assignment
   67 |     if(list == NULL || list->current = NULL || list->current->prev == NULL) return NULL;
      |                                      ^
list.c:69:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   69 |     if(list->current = NULL) return NULL;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
35af142
Sun 19 Mar 2023 03:37:35 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:69:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   69 |     if(list->current = NULL) return NULL;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
5c63328
Sun 19 Mar 2023 03:37:44 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e9d1cf1
